cmake_minimum_required(VERSION 3.13)
project(SPMediaKeyTap)
add_library(SPMediaKeyTap SPMediaKeyTap.m)
target_link_libraries(SPMediaKeyTap PUBLIC "-framework AppKit")
set_target_properties(SPMediaKeyTap PROPERTIES PUBLIC_HEADER SPMediaKeyTap.h)
install(TARGETS SPMediaKeyTap
  EXPORT SPMediaKeyTapTargets
  FRAMEWORK DESTINATION ${FRAMEWORK_INSTALL_DIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
